src/snapshots/fuzzy__lexer__test__braces.snap
---
source: src/lexer.rs
expression: tokens
---
- LBrace
- I32: 1
- Label: +
- I32: 2
- RBrace
- Label: "->"
- Label: f
- Dot
