src/snapshots/fuzzy__lexer__test__brackets.snap
---
source: src/lexer.rs
expression: tokens
---
- LBracket
- I32: 1
- Label: +
- I32: 2
- RBracket
- Dot
