src/snapshots/fuzzy__lexer__test__comma.snap
---
source: src/lexer.rs
expression: tokens
---
- Symbol: "1"
- Symbol: +
- Symbol: "2"
- Comma
- Symbol: "*"
- Symbol: "3"
