src/snapshots/fuzzy__lexer__test__comment.snap
---
source: src/lexer.rs
expression: tokens
---
- I32: 1
- Label: +
- I32: 2
- Dot
- I32: 3
- Label: "*"
- I32: 4
