src/snapshots/fuzzy__lexer__test__continuous_parenthesis.snap
---
source: src/lexer.rs
expression: tokens
---
- LParen
- I32: 1
- Label: +
- LParen
- I32: 2
- Label: "*"
- I32: 3
- RParen
- RParen
- Dot
