src/snapshots/fuzzy__lexer__test__lex_lazy_type.snap
---
source: src/lexer.rs
expression: tokens
---
- LBracket
- Symbol: i32
- Symbol: "{}"
- Symbol: "{}"
- RBracket
