src/snapshots/fuzzy__lexer__test__lex_self.snap
---
source: src/lexer.rs
expression: tokens
---
- I32: 1
- Label: +
- Slf
- Comma
- Label: "*"
- Label: $ab
