src/snapshots/fuzzy__lexer__test__lex_semicolon.snap
---
source: src/lexer.rs
expression: tokens
---
- I32: 1
- Label: +
- I32: 2
- Semicolon
- Label: "*"
- I32: 5
