src/snapshots/fuzzy__lexer__test__oneline.snap
---
source: src/lexer.rs
expression: tokens
---
- Symbol: "12"
- Symbol: "->"
- Symbol: twelve
- Dot
