src/snapshots/fuzzy__lexer__test__parenthesis.snap
---
source: src/lexer.rs
expression: tokens
---
- I32: 1
- Label: +
- LParen
- I32: 2
- Label: "*"
- I32: 3
- RParen
- Dot
